   * unit animation terrain filter now supports wildcard matching.
   * the encountered terrains are now written in a new format.
     this means the user has to rediscover all available terrains.
   * fixed a bug which returned wrong values if a random number was negative
   * max level advancements now raise the advance and post_advance events
 * sound
   * new or revised sounds: morning star, holy magic.
   * add advanced sound tab to pref allowing you to play with sample_rate and
     buffer_size options
 * misc:
   * --validcache runtime switch to force assumption that cache is valid
   * add two new debug command set_var and show_var to check variables within
     the game easily
   * better handling of SDL_ListModes return code (no user impact)
   * first turn of a game is saved again (fixes bug #7909 and bug #8117)
   * reduce CPU usage by removing calls to SDL_GetTicks for idle animations
   * changed network thread management to be more scalable, both with an upper
   and lower number of threads
   * enabled python as default, to disable it use --disable-python
   * various code cleanups

Version 1.2:
 * campaigns:
   * Two Brothers:
     * updated portraits for Arne nad Bjarn
   * Under the Burning Suns:
     * changed some maps to fix glitches
     * fixed some image paths
     * new naga hunter portrait from Ranger M
     * uses the new lava transitions
 * graphics:
   * terrain:
     * new ice transition
     * modified swamp color
   * units:
     * new team-colored base-frames: grand marshal, human assassin, sergeant
     * halos for elvish shaman line attacks
     * new lightning bolt for Delfador
     * new fireball attack
     * new attack icons for wose crush and troll hammer
   * misc:
     * new icons for preferences
     * updated hex grid
 * language and i18n:
   * new man pages: Russian
   * updated translations: Catalan, Dutch, French, German, Greek, Italian,
     Norwegian, Russian, Slovenian
   * updated DejaVuSans font to 2.13